# jisho

./: .gitignore  README.md  add_anki_card.py  anki_template.txt  convert_css.py  extract.py  make_anki_template.py  process_entry.py  pydaijirin.py  pyjisho.py  requirements.txt  test.py
conv/: Cargo.toml
conv/src/: lib.rs  main.rs
css/: a.html  a.py  b.py  jp-cn.css  jp-cn_raw.css  jp-en.css  jp-en_raw.css  jp.css  jp_raw.css
jisho/: Cargo.toml
jisho/src/: lib.rs
pyjisho/: .gitignore  Cargo.toml
pyjisho/src/: lib.rs
