[package]
name = "jisho"
version = "0.1.0"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jisho"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
libxml = "0.3.0"
pyo3 ={version = "0.13.2", features = ["extension-module"]}
romkan = "0.2.1"
serde = {version = "1.0.126", features = ['derive']}
